Change project strucure to use a separated handler module
Change project strucure to use a separated handler module by splitting up 'raid.py' into multiple logically grouped handler files using a 'settings.py' file for constants.
