# sam/swagger.yaml
@@ -861,166 +861,6 @@ paths:
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
         type: mock
-  /institution/{grid}:
-    get:
-      summary: "Return a list of RAiDs belonging to the institution in the path"
-      tags:
-      - "Institution"
-      x-amazon-apigateway-auth:
-        type: aws_iam
-      produces:
-      - application/json
-      parameters:
-      - name: grid
-        in: path
-        required: true
-        type: string
-        description: "Example: grid.1003.2"
-      - name: "limit"
-        in: "query"
-        required: false
-        type: "integer"
-        description: "The maximum number of items to return"
-      - name: "ascending"
-        in: "query"
-        required: false
-        type: "boolean"
-        description: "Order list by in ascending order (most recently created first)"
-      - name: "exclusiveStartKey"
-        in: "query"
-        required: false
-        type: "string"
-        description: "Key of the last item returned in a previous query to be used for large lists and pagination"
-      responses:
-        200:
-          description: "200 response"
-          schema:
-            $ref: "#/definitions/InstitutionRAiDsModel"
-          headers:
-            Access-Control-Allow-Origin:
-              type: "string"
-      security:
-      - CustomAuthorizerJwt: []
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: 200
-            responseParameters:
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        uri: arn:aws:apigateway:<<region>>:lambda:path/2015-03-31/functions/arn:aws:lambda:<<region>>:<<account>>:function:${stageVariables.GetInstitutionRaidsFunction}/invocations
-        httpMethod: POST
-        type: aws_proxy
-    options:
-      tags:
-      - "CORS"
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        200:
-          description: 200 response
-          schema:
-            $ref: "#/definitions/Empty"
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-            Access-Control-Allow-Methods:
-              type: string
-            Access-Control-Allow-Headers:
-              type: string
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: 200
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        passthroughBehavior: when_no_match
-        requestTemplates:
-          application/json: "{\"statusCode\": 200}"
-        type: mock
-  /provider/{providerId}:
-    get:
-      summary: "Return a list of RAiDs belonging to the provider in the path"
-      tags:
-      - "Provider"
-      x-amazon-apigateway-auth:
-        type: aws_iam
-      produces:
-      - application/json
-      parameters:
-      - name: providerId
-        in: path
-        required: true
-        type: string
-        description: "Example: RDS"
-      - name: "limit"
-        in: "query"
-        required: false
-        type: "integer"
-        description: "The maximum number of items to return"
-      - name: "ascending"
-        in: "query"
-        required: false
-        type: "boolean"
-        description: "Order list by in ascending order (most recently created first)"
-      - name: "exclusiveStartKey"
-        in: "query"
-        required: false
-        type: "string"
-        description: "Key of the last item returned in a previous query to be used for large lists and pagination"
-      responses:
-        200:
-          description: "200 response"
-          schema:
-            $ref: "#/definitions/ProviderRAiDsModel"
-          headers:
-            Access-Control-Allow-Origin:
-              type: "string"
-      security:
-      - CustomAuthorizerJwt: []
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: 200
-            responseParameters:
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        uri: arn:aws:apigateway:<<region>>:lambda:path/2015-03-31/functions/arn:aws:lambda:<<region>>:<<account>>:function:${stageVariables.GetProviderRaidsFunction}/invocations
-        httpMethod: POST
-        type: aws_proxy
-    options:
-      tags:
-      - "CORS"
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        200:
-          description: 200 response
-          schema:
-            $ref: "#/definitions/Empty"
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-            Access-Control-Allow-Methods:
-              type: string
-            Access-Control-Allow-Headers:
-              type: string
-      x-amazon-apigateway-integration:
-        responses:
-          default:
-            statusCode: 200
-            responseParameters:
-              method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token'"
-              method.response.header.Access-Control-Allow-Origin: "'*'"
-        passthroughBehavior: when_no_match
-        requestTemplates:
-          application/json: "{\"statusCode\": 200}"
-        type: mock
   /owner:
     get:
       summary: "Return a list of RAiDs that are currently owned to the authenticated key"
